# uvcctl

./: CMakeLists.txt  LICENSE  UI.java  UVC.java  rotation.h  stack.cpp  stack.h  uvc_control.c  uvc_control.h
